<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_routes">View Routes</string>
    <string name="title_activity_first_time">Welcome</string>
    <string name="title_activity_feedback">Provide Feedback</string>
    <string name="title_entry_activity">Tracker Sync</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem Ipsum</string>
    <string name="loading">Waiting for sync....</string>
    <string name="description_refresh">Refresh</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>

    <!-- Text labels -->
    <string name="label_fullName">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_subject">Subject</string>
    <string name="label_message">Message</string>
    <string name="list_view_placeholder">Medium Text</string>
    <string name="route_holder">Route <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="route_available">Available Routes</string>
    <string name="plate_holder">UAX 891P</string>
    <string name="bus_time_holder">10 mins away</string>
    <string name="route_name">Route Name</string>
    <string name="stops_label">Stops along the route</string>
    <string name="stops_template">kampala,wandegeya</string>
    <string name="buses_label">Buses on this route</string>
    <string name="map_bus_label">On the map</string>

    <!-- Text Field hints -->
    <string name="hint_fullName">John Doe</string>
    <string name="hint_email">example@example.com</string>
    <string name="hint_message">text..</string>
    <string name="hint_search">search for stage</string>

    <!-- Buttons -->
    <string name="btn_submit">Submit</string>
    <string name="title_activity_search">Search</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <!-- content description -->
    <string name="logo_description">This is the main application logo.</string>
    <string name="search_description">search button.</string>
    <string name="img_description">Represents an image that will stand in for something.</string>

    <!-- string representations -->
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="action_settings">animation</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="title_activity_route_details">Route Details</string>
    <string name="tour_description"><![CDATA[Lorem ipsum dolor sit amet fermentum elit porta.]]></string>
    <string name="title_activity_bus_location">Bus Location</string>
    <string name="title_activity_speed">Speed Activity</string>
    <string name="title_activity_stop_location">Stop Location</string>

</resources>
