<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     >


<LinearLayout
    android:orientation="vertical"  
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
     >

    <TextView
        android:id="@+id/route_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:layout_marginTop="5dp"
        android:textColor="#ff6600"
        android:text="@string/route_holder" />
    
    <TextView
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:textSize="24sp"
        android:textColor="#3079ed"  
        android:layout_margin="5dp"  
        android:text="@string/route_name" />
    
    <TextView
        android:id="@+id/stops_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"               
        android:textSize="15sp"
        android:textColor="#ff6600"         
        android:text="@string/stops_label" />
    
       <TextView
        android:id="@+id/route_stops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_margin="5dp"        
        android:textSize="15sp"        
        android:text="@string/stops_template" />
       
        <TextView
        android:id="@+id/buses_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:layout_marginTop="26dp"
        android:textColor="#ff6600"        
        android:textSize="15sp"        
        android:text="@string/buses_label" />
           
       <ListView
           android:id="@android:id/list"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_marginRight="20dp"           
            >
       </ListView>
       
          <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/list"
            android:id="@+id/progressBar"/>

</LinearLayout>
</ScrollView>